Add images and float styling to both images and sidebar
Co-authored-by: JaredGran <jared.carper@gmail.com>

--- a/README.me
+++ b/README.me
@@ -1,8 +1,13 @@
-- Application name: 
-- Names of contributors: 
-- Brief description of the project: 
+- Application name: band-website
+- Names of contributors: Kyle Chinick, Jared Carper
+- Brief description of the project: a website to showcase the float style
 - Technologies used: 
-- Longer description of the project as needed: 
-- Complete setup/installation instructions: 
-- Known bugs: 
-- License information with a copyright and date:
+
+  * HTML
+
+  * CSS
+
+- Longer description of the project as needed: a website to showcase the float style of css in html
+- Complete setup/installation instructions: open in browser or download from github and open in files in a text reader
+- Known bugs: none so far
+- License information with a copyright and date:N/A
